<resources>
    <string name="app_name">FiNext</string>

    <!--Splash Labels-->
    <string name="splash_name">FiNEXT</string>
    <string name="splash_sub_name">Financial Expense Tracking App</string>
    <string name="tagline">Plan your next move</string>
    <string name="splash_button">Open</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Menu Labels-->
    <string name="Home">Home</string>
    <string name="Finote">FiNote</string>
    <string name="Finance">Finance</string>
    <string name="Profile">Profile</string>

    <!--Profile Buttons  Labels-->
    <string name="profile_darkMode">Dark Mode</string>
    <string name="profile_password_btn">Change Password</string>
    <string name="profile_language">Language</string>
    <string name="profile_about">About App</string>
    <string name="profile_terms">Terms &amp; Condition</string>
    <string name="profile_privacy">Privacy Policy</string>
    <string name="profile_share">Share This App</string>

    <!-- FINANCE AND BUDGET STRING DEFINITIONS -->
    <string name="budget_header">Finance and Expense</string>

    <string-array name="items">
        <item>RTX 4090</item>
        <item>RTX 4080</item>
        <item>RTX 4080 SUPER</item>
        <item>RTX 4070</item>
        <item>RTX 4070 SUPER</item>
        <item>RTX 4060</item>
        <item>RTX 4060 TI</item>
    </string-array>

    <string-array name="cost">
        <item>₱ 93,961</item>
        <item>₱ 67,340</item>
        <item>₱ 73,650</item>
        <item>₱ 40,999</item>
        <item>₱ 46,799</item>
        <item>₱ 18,500</item>
        <item>₱ 26,895</item>
    </string-array>

    <string-array name="from">
        <item>Shopee</item>
        <item>Shopee</item>
        <item>Shopee</item>
        <item>Shopee</item>
        <item>Shopee</item>
        <item>Shopee</item>
        <item>Shopee</item>
    </string-array>
</resources>
